# jsonschema-formulas

./: .gitignore  README.md  pyproject.toml  test.py
json_formula_evaluator/: __init__.py  evaluator.py
jsonschema_formulas/: __init__.py  evaluator.py
tests/: test_formula_evaluator.py
